# GasInc

./: .eslintcache  .gitignore  Procfile  asgi.py  db.sqlite3  manage.py  package.json  pyproject.toml  requirements.txt  settings.py  todo.txt  wsgi.py
PyMySQL-master/PyMySQL.egg-info/: PKG-INFO
gsibackend/: local_settings.py  settings.py  urls.py
media/: admin.py  models.py  serializers.py  views.py
media/migrations/: 0001_initial.py  0002_auto_20210111_2116.py  0003_auto_20210111_2118.py
projects/: admin.py  models.py  serializers.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20210113_2124.py
src/: App.css  App.js
